[gd_scene load_steps=60 format=2]

[ext_resource path="res://images/Trilho.jpg" type="Texture" id=1]
[ext_resource path="res://images/Trem.png" type="Texture" id=2]
[ext_resource path="res://images/Estacao.png" type="Texture" id=3]
[ext_resource path="res://simular.gd" type="Script" id=4]
[ext_resource path="res://images/luzico.png" type="Texture" id=5]
[ext_resource path="res://images/btn05on.png" type="Texture" id=6]
[ext_resource path="res://LbIniciar.gd" type="Script" id=7]
[ext_resource path="res://images/Btn02press.png" type="Texture" id=8]
[ext_resource path="res://images/Btn02.png" type="Texture" id=9]
[ext_resource path="res://images/Btn01.png" type="Texture" id=10]
[ext_resource path="res://images/btn01press.png" type="Texture" id=11]
[ext_resource path="res://images/Btn01on.png" type="Texture" id=12]
[ext_resource path="res://images/Btn02on.png" type="Texture" id=13]
[ext_resource path="res://images/painel.png" type="Texture" id=14]
[ext_resource path="res://images/btn05.png" type="Texture" id=15]
[ext_resource path="res://images/Btn03.png" type="Texture" id=16]
[ext_resource path="res://images/Btn03press.png" type="Texture" id=17]
[ext_resource path="res://images/Btn03on.png" type="Texture" id=18]
[ext_resource path="res://sons/iniciar.mp3" type="AudioStream" id=19]
[ext_resource path="res://images/btn05press.png" type="Texture" id=20]
[ext_resource path="res://images/btn04on.png" type="Texture" id=21]
[ext_resource path="res://images/btn04.png" type="Texture" id=22]
[ext_resource path="res://images/btn04press.png" type="Texture" id=23]
[ext_resource path="res://images/btn06on.png" type="Texture" id=24]
[ext_resource path="res://images/btn06.png" type="Texture" id=25]
[ext_resource path="res://images/btn06press.png" type="Texture" id=26]
[ext_resource path="res://images/btn09.png" type="Texture" id=27]
[ext_resource path="res://images/btn09on.png" type="Texture" id=28]
[ext_resource path="res://images/Btn09press.png" type="Texture" id=29]
[ext_resource path="res://images/btn10press.png" type="Texture" id=30]
[ext_resource path="res://images/btn10on.png" type="Texture" id=31]
[ext_resource path="res://images/btn10.png" type="Texture" id=32]
[ext_resource path="res://images/lamp.png" type="Texture" id=33]
[ext_resource path="res://images/lampV.png" type="Texture" id=34]
[ext_resource path="res://images/lampA.png" type="Texture" id=35]
[ext_resource path="res://images/marcaI.png" type="Texture" id=36]
[ext_resource path="res://sons/vermelho.mp3" type="AudioStream" id=37]
[ext_resource path="res://sons/azul.mp3" type="AudioStream" id=38]
[ext_resource path="res://images/CimaBaixo.png" type="Texture" id=39]
[ext_resource path="res://images/Som.png" type="Texture" id=40]
[ext_resource path="res://images/ceu.png" type="Texture" id=41]
[ext_resource path="res://images/btnFecharOn.png" type="Texture" id=42]
[ext_resource path="res://images/btnFechar.png" type="Texture" id=43]
[ext_resource path="res://images/btnResetOn.png" type="Texture" id=44]
[ext_resource path="res://images/btnReset.png" type="Texture" id=45]
[ext_resource path="res://conthrax-sb.ttf" type="DynamicFontData" id=46]
[ext_resource path="res://arial.tres" type="DynamicFont" id=47]
[ext_resource path="res://riscador/Riscar.tscn" type="PackedScene" id=48]
[ext_resource path="res://images/vizao.png" type="Texture" id=49]
[ext_resource path="res://Controle.gd" type="Script" id=50]
[ext_resource path="res://images/info.png" type="Texture" id=51]
[ext_resource path="res://images/infoOn.png" type="Texture" id=52]
[ext_resource path="res://images/infoPress.png" type="Texture" id=53]
[ext_resource path="res://images/informe.png" type="Texture" id=54]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=4]
size = 29
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 46 )

[sub_resource type="DynamicFont" id=3]
size = 29
outline_size = 1
outline_color = Color( 0.0666667, 0, 0.666667, 1 )
use_filter = true
font_data = ExtResource( 46 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 5
outline_color = Color( 0.247059, 0.247059, 0.247059, 1 )
use_filter = true
extra_spacing_char = 17
font_data = ExtResource( 46 )

[node name="simular" type="Node2D"]
script = ExtResource( 4 )

[node name="SpEstrelas" type="Sprite" parent="."]
scale = Vector2( 1.29451, 1.29451 )
texture = ExtResource( 41 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 560 )
region_filter_clip = true

[node name="SpTrilhos" type="Sprite" parent="."]
position = Vector2( 0, 200 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 125 )

[node name="Trem" type="Sprite" parent="."]
position = Vector2( 651, 260.651 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="SpVizao2" type="Sprite" parent="Trem"]
visible = false
modulate = Color( 0.470588, 1, 1, 1 )
position = Vector2( -18.3334, -36.085 )
scale = Vector2( 2.63542, 2.63542 )
z_index = 1
texture = ExtResource( 49 )

[node name="posVerm" type="Position2D" parent="Trem"]
position = Vector2( 414, 85 )

[node name="lampV" type="Sprite" parent="Trem"]
visible = false
position = Vector2( 413.658, 78.6284 )
texture = ExtResource( 34 )

[node name="posAzul" type="Position2D" parent="Trem"]
position = Vector2( -449, 85 )

[node name="lampA" type="Sprite" parent="Trem"]
visible = false
position = Vector2( -448.334, 78.981 )
texture = ExtResource( 35 )

[node name="posCentro" type="Position2D" parent="Trem"]
position = Vector2( -17.1121, -0.590057 )

[node name="kinTrem" type="Area2D" parent="Trem"]

[node name="ColTrem" type="CollisionShape2D" parent="Trem/kinTrem"]
position = Vector2( -17.2227, -1.9136 )
shape = SubResource( 1 )

[node name="Estacao" type="Sprite" parent="."]
position = Vector2( 640.988, 377.413 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="EstaLampA" type="Sprite" parent="Estacao"]
position = Vector2( -432.735, -72.4392 )
rotation = 3.14159
texture = ExtResource( 35 )

[node name="PosA" type="Position2D" parent="Estacao"]
position = Vector2( -432.313, -78.719 )

[node name="EstaLampV" type="Sprite" parent="Estacao"]
position = Vector2( 431.211, -71.4331 )
rotation = 3.14159
texture = ExtResource( 34 )

[node name="PosV" type="Position2D" parent="Estacao"]
position = Vector2( 430.687, -78.719 )

[node name="kinEstacao" type="Area2D" parent="Estacao"]

[node name="ColEstacao" type="CollisionShape2D" parent="Estacao/kinEstacao"]
position = Vector2( 0, 4.94617 )
shape = SubResource( 2 )

[node name="Controle" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 50 )

[node name="PanControle" type="Sprite" parent="Controle"]
position = Vector2( 639.627, 624 )
scale = Vector2( 1.27493, 1.31071 )
texture = ExtResource( 14 )

[node name="PanVTrem" type="Sprite" parent="Controle"]
position = Vector2( 641.221, 138.041 )
scale = Vector2( 0.226363, 0.720035 )
texture = ExtResource( 14 )

[node name="PanTitulo" type="Sprite" parent="Controle"]
position = Vector2( 641.358, 39.3364 )
scale = Vector2( 1.27504, 0.520882 )
texture = ExtResource( 14 )

[node name="VelTrem" type="SpinBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -236.0
margin_right = 26.0
margin_bottom = -200.0
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Define a velocidade
do Trem"
custom_icons/updown = ExtResource( 39 )
min_value = 1.0
value = 30.0
align = 1
suffix = "% C"

[node name="Label" type="Label" parent="Controle/VelTrem"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.1647
margin_top = -19.8113
margin_right = 68.8353
margin_bottom = -1.81133
custom_fonts/font = ExtResource( 47 )
text = "Velocidade do Trem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btLenta" type="TextureButton" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.9999
margin_top = -168.0
margin_right = 32.0001
margin_bottom = -104.0
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 31 )

[node name="btCentro" type="TextureButton" parent="Controle/btLenta"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0001
margin_top = 16.0
margin_right = 31.9999
margin_bottom = 80.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btEsq" type="TextureButton" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -88.0
margin_right = -96.0
margin_bottom = -24.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
flip_h = true

[node name="btDir" type="TextureButton" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -88.0
margin_right = 160.0
margin_bottom = -24.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btPlay" type="TextureButton" parent="Controle"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -168.0
margin_right = -63.9999
margin_bottom = -104.0
rect_pivot_offset = Vector2( 32, 32 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btLuz" type="TextureButton" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -168.0
margin_right = 128.0
margin_bottom = -104.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wsite" type="TextureButton" parent="Controle"]
pause_mode = 2
margin_left = 18.0
margin_top = 14.0
margin_right = 107.0
margin_bottom = 64.0
hint_tooltip = "website"
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 28 )

[node name="btFechar" type="TextureButton" parent="Controle"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -73.0
margin_top = 7.0
margin_right = -9.0
margin_bottom = 71.0
hint_tooltip = "Fechar"
texture_normal = ExtResource( 43 )
texture_hover = ExtResource( 42 )

[node name="btTela" type="TextureButton" parent="Controle"]
pause_mode = 2
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1130.09
margin_top = -352.935
margin_right = 554.091
margin_bottom = -288.935
hint_tooltip = "Tela cheia"
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 21 )

[node name="btReset" type="TextureButton" parent="Controle"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -227.0
margin_top = 7.0
margin_right = -163.0
margin_bottom = 71.0
hint_tooltip = "Reiniciar"
texture_normal = ExtResource( 45 )
texture_hover = ExtResource( 44 )

[node name="btPause" type="TextureButton" parent="Controle"]
pause_mode = 2
visible = false
margin_left = 512.0
margin_top = 552.0
margin_right = 576.0
margin_bottom = 616.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btInfo" type="TextureButton" parent="Controle"]
margin_left = 133.0
margin_top = 14.0
margin_right = 183.0
margin_bottom = 64.0
texture_normal = ExtResource( 51 )
texture_pressed = ExtResource( 53 )
texture_hover = ExtResource( 52 )
expand = true

[node name="spInform" type="Sprite" parent="Controle/btInfo"]
visible = false
position = Vector2( -116, 62 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 54 )
centered = false

[node name="Marcar" type="CheckBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -363.0
margin_top = -160.0
margin_right = -214.0
margin_bottom = -134.0
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Marca o local onde a luz
foi emitida"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
text = "Local da emissão"

[node name="marcaI" type="Sprite" parent="Controle/Marcar"]
position = Vector2( -14.8465, 12.8174 )
texture = ExtResource( 36 )

[node name="SoundLogo" type="Sprite" parent="Controle"]
position = Vector2( 261.872, 662.467 )
scale = Vector2( 1.0479, 1.0479 )
texture = ExtResource( 40 )

[node name="SonEstacao" type="CheckBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -348.935
margin_top = -55.9999
margin_right = -272.935
margin_bottom = -31.9999
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Observador da Estação
emite som ao ver a luz"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
text = "Estação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SonTrem" type="CheckBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -348.935
margin_top = -95.9999
margin_right = -287.935
margin_bottom = -71.9999
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Observador do Trem 
emite som ao ver a luz"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
text = "Trem"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmisEStacao" type="CheckBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -582.0
margin_top = -56.0001
margin_right = -498.0
margin_bottom = -30.0001
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Instala os emissores
na Estação"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
pressed = true
text = "Estação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lamp" type="Sprite" parent="Controle/EmisEStacao"]
position = Vector2( -16.0576, -0.299988 )
scale = Vector2( 0.65779, 0.657291 )
texture = ExtResource( 33 )

[node name="EmisTrem" type="CheckBox" parent="Controle"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -582.0
margin_top = -88.0
margin_right = -502.0
margin_bottom = -62.0
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Instala os emissores
no Trem"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
text = "Trem"

[node name="LuzAutomatca" type="CheckBox" parent="Controle"]
margin_left = 58.0
margin_top = 560.0
margin_right = 166.0
margin_bottom = 586.0
rect_scale = Vector2( 1.5, 1.5 )
hint_tooltip = "Ativa o disparo de luz
quando o Trem alinhar com a Estação"
focus_mode = 0
custom_colors/font_color_hover = Color( 0.54902, 1, 0.662745, 1 )
custom_colors/font_color_pressed = Color( 0.0901961, 0.898039, 0, 1 )
custom_fonts/font = ExtResource( 47 )
pressed = true
text = "Automática"
expand_icon = true

[node name="btn01press" type="Sprite" parent="Controle/LuzAutomatca"]
position = Vector2( -15.0062, 9.0726 )
scale = Vector2( 0.523407, 0.479463 )
texture = ExtResource( 5 )

[node name="LbData" type="Label" parent="Controle"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -383.0
margin_top = -147.0
margin_right = -33.0
margin_bottom = -35.0
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 20
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 4 )
text = "DATA: 00-00-0000
HORA: 00 : 00 : 00"
valign = 1
autowrap = true
uppercase = true

[node name="LbTitulo" type="Label" parent="Controle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -341.5
margin_top = 22.0
margin_right = 341.5
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "EXPERIMENTO DA SIMULTANEIDADE"
align = 1
valign = 1

[node name="VermFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )

[node name="AzulFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )

[node name="LbIniciar" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1281.0
margin_top = 236.0
margin_right = 1842.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 5 )
text = "INICIAR"
script = ExtResource( 7 )

[node name="Iniciar" type="AudioStreamPlayer" parent="LbIniciar"]
stream = ExtResource( 19 )

[node name="Riscar" parent="." instance=ExtResource( 48 )]

[node name="SpVizao" type="Sprite" parent="."]
visible = false
position = Vector2( 642, 396 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 49 )

[node name="Cont" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="Trem/kinTrem" to="." method="_on_kinTrem_area_entered"]
[connection signal="area_entered" from="Estacao/kinEstacao" to="." method="_on_kinEstacao_area_entered"]
[connection signal="button_down" from="Controle/btLenta" to="." method="_on_btLenta_button_down"]
[connection signal="button_up" from="Controle/btLenta" to="." method="_on_btLenta_button_up"]
[connection signal="pressed" from="Controle/btLenta/btCentro" to="." method="_on_btCentro_pressed"]
[connection signal="pressed" from="Controle/btEsq" to="." method="_on_btEsq_pressed"]
[connection signal="pressed" from="Controle/btDir" to="." method="_on_btDir_pressed"]
[connection signal="pressed" from="Controle/btPlay" to="." method="_on_btPlay_pressed"]
[connection signal="pressed" from="Controle/btLuz" to="." method="_on_btLuz_pressed"]
[connection signal="pressed" from="Controle/Wsite" to="." method="_on_Wsite_pressed"]
[connection signal="pressed" from="Controle/btFechar" to="." method="_on_btFechar_pressed"]
[connection signal="pressed" from="Controle/btTela" to="." method="_on_btTela_pressed"]
[connection signal="pressed" from="Controle/btReset" to="." method="_on_btReset_pressed"]
[connection signal="pressed" from="Controle/btPause" to="." method="_on_btPause_pressed"]
[connection signal="button_down" from="Controle/btInfo" to="Controle" method="_on_btInfo_button_down"]
[connection signal="button_up" from="Controle/btInfo" to="Controle" method="_on_btInfo_button_up"]
[connection signal="pressed" from="Controle/EmisEStacao" to="." method="_on_EmisEStacao_pressed"]
[connection signal="pressed" from="Controle/EmisTrem" to="." method="_on_EmisTrem_pressed"]
[connection signal="timeout" from="Cont" to="." method="_on_Cont_timeout"]
